# interview-practice

./: .gitignore  .pre-commit-config.yaml  PYCHARM_SETUP.md  README.md  README_BigO.md  pycharm_config_helper.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
algorithms/: searching.py  sorting.py  visualize_binary_search.py
leetcode/: asteroid_collision.py  k_closest_points.py  k_closest_points_sort.py  kth_smallest_pair_distance.py  kth_smallest_pair_distance_naive.py  max_area_of_island.py  max_area_of_island_bfs.py  median_two_sorted_arrays.py  median_two_sorted_arrays_naive.py  merge_intervals.py  merge_intervals_naive.py  merge_k_sorted_lists.py  merge_k_sorted_lists_divide.py  min_cost_connect_points.py  min_cost_connect_points_kruskal.py  permutation_sequence.py  permutation_sequence_naive.py  permutations_ii.py  permutations_ii_itertools.py  problem_001_two_sum.py  regex_matching.py  regex_matching_recursive.py  rotate_array.py  spiral_matrix.py  trie.py  trie_singledispatch.py  two_sum.py  two_sum_naive.py
system_design/: notes.md
tests/: test_activity_selection.py  test_arrays.py  test_benchmark_activity_selection.py  test_benchmark_hash.py  test_benchmark_sudoku.py  test_custom_hash.py  test_decorator.py  test_dynamic_array.py  test_edit_distance.py  test_graph.py  test_hash_map.py  test_knapsack.py  test_lcs.py  test_linked_list.py  test_max_heap.py  test_max_product_cutting.py  test_merge_sort.py  test_min_heap.py  test_n_queens.py  test_observer.py  test_searching.py  test_singleton.py  test_sorting.py  test_strassen.py  (+3 more)
(+99 files in other folders)
