[project]
name = "interview-practice"
version = "0.1.0"
description = "Algorithms and data structures practice. (Dependency management: uv preferred)"
dependencies = [
    "matplotlib>=3.8.0,<4.0.0",
    "seaborn>=0.13.0,<0.14.0",
    "tabulate>=0.9.0,<0.10.0",
    "numpy>=1.26.0,<2.0.0",
    "scikit-learn>=1.5.0,<2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0,<9.0.0",
    "black>=24.4.0,<25.0.0",
    "isort>=5.13.0,<6.0.0"
]

# Use 'uv' (https://github.com/astral-sh/uv) for fast dependency management and installation.
# Example: 'uv pip install .[dev]'

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
known_first_party = ["algorithms", "data_structures", "leetcode", "ood", "system_design", "utils"]
known_third_party = ["pytest", "matplotlib", "seaborn", "tabulate"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
